--- a/landing.css
+++ b/landing.css
@@ -88,3 +88,32 @@ button {
     color: #ffffff;
     padding: 5px 20px;
 }
+
+#about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.boxes {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    gap: 50px;
+    flex: 1;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1;
+    max-width: 200px;
+    gap: 10px;
+    text-align: center;
+}
+
+.instagram {
+    flex: 1 1;
+    background-color: #000000;
+}
