--- a/landing.css
+++ b/landing.css
@@ -65,7 +65,7 @@ a {
 }
 
 .right-home {
-    flex: 0 1;
+    flex: 0 0 400px;
 }
 
 .right-home img {
@@ -93,7 +93,9 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    gap: 50px;
+    margin: 30px 0px 50px;
 }
 
 .boxes {
@@ -107,13 +109,15 @@ button {
 .box {
     display: flex;
     flex-direction: column;
-    flex: 1 1;
-    max-width: 200px;
+    flex: 0 1 241px;
     gap: 10px;
     text-align: center;
 }
 
 .instagram {
-    flex: 1 1;
-    background-color: #000000;
+    flex: 0 1 241px;
+}
+
+img {
+    max-width: 100%;
 }
