--- a/landing.css
+++ b/landing.css
@@ -8,13 +8,13 @@ body {
     margin: 0px;
 }
 
-.header {
+.header,.footer {
     display: flex;
     justify-content: space-around;
     background-color: #1F2937;
     margin: 0px;
     align-items: center;
-    padding: 10px;
+    padding: 25px;
     color: #ffffff;
 }
 
@@ -37,6 +37,8 @@ body {
 
 a {
     white-space: nowrap;
+    text-decoration: none;
+    color: #F9FAF8;
 }
 
 .hero-main {
@@ -49,7 +51,7 @@ a {
     background-color: #1F2937;
     color: #ffffff;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 20px;
 }
 
@@ -120,4 +122,49 @@ button {
 
 img {
     max-width: 100%;
+}
+
+.info-header {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+#demo-reel {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    padding: 50px;
+    height: 100vh;
+}
+
+#demo-reel img {
+    height: 80vh;
+}
+
+#contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px;
+    background-color: #3882F6;
+    color: #ffffff;
+    border-radius: 5px;
+    gap: 100px;
+    align-items: center;
+    min-width: 80%;
+}
+
+.call-to-action button {
+    border-color: #ffffff;
+    border-style: solid;
+    border-width: 1px;
 }
